--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -50,7 +50,7 @@
     <div class="expert">
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
-            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导！他们大都是创始团队成员的导师或研究伙伴，贴身指导着我们的成长。
+            我们感谢全球顶尖的心理学家丶经济学家及人工智能专家为幸福创客做出的指导。他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们”的成长。
         </div>
         <ul>
             <li>
@@ -98,8 +98,71 @@
         </ul>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            全球华人积极心理学会（GCPPA）与幸福创客成为战略合作伙伴，我们热烈欢迎GCPPA的全球两百多位华人心理学家成为我们的专家库成员。我们会尽快更新专家库的信息。
+            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学丶神经科学丶哲学丶经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力丶孤独和挑战。因此，我们开发了“wi-matt”，一个让全世界专家们严肃学习丶轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
+
         </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            在wi-matt，专家们可以：
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 获取最前沿的科研信息
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 展示科研成果
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 专业学术丶案例交流
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 跨界合作
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 全球资源共享
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 业界同仁交友
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 自助学习，专业增值
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 参与科研的机会
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            &nbsp; &nbsp; &nbsp; 为大众提供专业心理服务
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            为了提供最好的服务，所以我们暂时只通过邀请码的方式邀请部分专家加入，如果您愿意在此阶段和我们一起让wi-matt变得更完美，请联络wi-matt@winnovator.com
+        </div>
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            我们会尽快更新专家库的信息。</div>
+
+        <ul class="putong_zhuanjia">
+            <li>
+                <div>
+                <img src="image/mayating-head.png"/>
+                <div class="expert_info">
+                    <div>马亚婷</div>
+                    <div>北京大学医学博士</div>
+                    <div class="position_img">美国 罗德岛州</div>
+
+                </div>
+                </div>
+                <div class="head_info">马亚婷Clare，幸福创客。北京大学医学博士。参与过世界卫生组织丶卫生部丶教育部等多项研究课题，并考取国家二级心理咨询师。关注抑郁症的预防及治疗丶儿童自闭症的干预及治疗丶学校教育丶亲职教育等。致力于从公共卫生的角度预防儿童及成人心理障碍的发生，减少复发丶促进康复，实现幸福殷盛的人生。</div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/chengkeshun-head.png"/>
+                    <div class="expert_info">
+                        <div>程克顺</div>
+                        <div>加利福尼亚大学洛杉矶分校心理学博士</div>
+                        <div class="position_img">美国 加州</div>
+
+                    </div>
+                </div>
+                <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是她开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
+            </li>
+        <ul>
     </div>
 
 
