--- a/mobile/index.html
+++ b/mobile/index.html
@@ -70,7 +70,7 @@
             <img class="info_img" src="./image/airobot.png"/>
         </a>
         <a href="./zhuanjia.html">
-            <img class="info_img" src="./image/experts.jpg"/>
+            <img class="info_img" src="./image/wi-Matt.png"/>
         </a>
         <a href="./ourteam.html">
             <img class="info_img" src="./image/learnmore.jpg"/>
