--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -98,11 +98,11 @@
         </ul>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学丶神经科学丶哲学丶经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力丶孤独和挑战。因此，我们开发了“wi-matt”，一个让全世界专家们严肃学习丶轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
+            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学丶神经科学丶哲学丶经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力丶孤独和挑战。因此，我们开发了“wi-Matt”，一个让全世界专家们严肃学习丶轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
 
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            在wi-matt，专家们可以：
+            在wi-Matt，专家们可以：
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 获取最前沿的科研信息
@@ -132,7 +132,7 @@
             &nbsp; &nbsp; &nbsp; 为大众提供专业心理服务
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            为了提供最好的服务，所以我们暂时只通过邀请码的方式邀请部分专家加入，如果您愿意在此阶段和我们一起让wi-matt变得更完美，请联络wi-matt@winnovator.com
+            为了提供最好的服务，所以我们暂时只通过邀请码的方式邀请部分专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络wi-matt@winnovator.com
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             我们会尽快更新专家库的信息。</div>
@@ -145,7 +145,7 @@
                     <div>马亚婷</div>
                     <div>北京大学医学博士</div>
                     <div class="position_img">美国 罗德岛州</div>
-
+                    <img class="control dakai" src="./image/dakai.png"/>
                 </div>
                 </div>
                 <div class="head_info">马亚婷Clare，幸福创客。北京大学医学博士。参与过世界卫生组织丶卫生部丶教育部等多项研究课题，并考取国家二级心理咨询师。关注抑郁症的预防及治疗丶儿童自闭症的干预及治疗丶学校教育丶亲职教育等。致力于从公共卫生的角度预防儿童及成人心理障碍的发生，减少复发丶促进康复，实现幸福殷盛的人生。</div>
@@ -161,6 +161,90 @@
                     </div>
                 </div>
                 <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是她开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
+            </li>
+            <li>
+                <div>
+                    <img src="image/"/>
+                    <div class="expert_info">
+                        <div></div>
+                        <div></div>
+                        <div class="position_img"></div>
+
+                    </div>
+                </div>
+                <div class="head_info"></div>
             </li>
         <ul>
     </div>
@@ -196,7 +280,7 @@
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
                 <img src="./image/weixin_icon.png"/>
-            </a>
+                </a>
             </li>
         </ul>
     </div>
