--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -50,7 +50,7 @@
     <div class="expert">
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
-            我们感谢全球顶尖的心理学家丶经济学家及人工智能专家为幸福创客做出的指导。他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们”的成长。
+            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导。他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们”的成长。
         </div>
         <ul>
             <li>
@@ -65,7 +65,7 @@
                 <img src="image/felicia.png"/>
                 <div class="expert_info">
                     <div>Felicia Huppert</div>
-                    <div>剑桥大学幸福研究所所长丶剑桥大学神经科学及心理学终身教授</div>
+                    <div>剑桥大学幸福研究所所长、剑桥大学神经科学及心理学终身教授</div>
                     <div>“A deep exploration of the psychology, neuroscience, human-computer interaction and artificial intelligence.”</div>
 
                 </div>
@@ -98,7 +98,7 @@
         </ul>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学丶神经科学丶哲学丶经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力丶孤独和挑战。因此，我们开发了“wi-Matt”，一个让全世界专家们严肃学习丶轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
+            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“wi-Matt”，一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
 
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
@@ -111,7 +111,7 @@
             &nbsp; &nbsp; &nbsp; 展示科研成果
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 专业学术丶案例交流
+            &nbsp; &nbsp; &nbsp; 专业学术、案例交流
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 跨界合作
@@ -142,13 +142,13 @@
                 <div>
                 <img src="image/mayating-head.png"/>
                 <div class="expert_info">
-                    <div>马亚婷</div>
+                    <div class="name">马亚婷</div>
                     <div>北京大学医学博士</div>
                     <div class="position_img">美国 罗德岛州</div>
                     <img class="control dakai" src="./image/dakai.png"/>
                 </div>
                 </div>
-                <div class="head_info">马亚婷Clare，幸福创客。北京大学医学博士。参与过世界卫生组织丶卫生部丶教育部等多项研究课题，并考取国家二级心理咨询师。关注抑郁症的预防及治疗丶儿童自闭症的干预及治疗丶学校教育丶亲职教育等。致力于从公共卫生的角度预防儿童及成人心理障碍的发生，减少复发丶促进康复，实现幸福殷盛的人生。</div>
+                <div class="head_info">马亚婷Clare，幸福创客。北京大学医学博士。参与过世界卫生组织、卫生部、教育部等多项研究课题，并考取国家二级心理咨询师。关注抑郁症的预防及治疗、儿童自闭症的干预及治疗、学校教育、亲职教育等。致力于从公共卫生的角度预防儿童及成人心理障碍的发生，减少复发、促进康复，实现幸福殷盛的人生。</div>
             </li>
             <li>
                 <div>
