--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -157,94 +157,85 @@
                         <div>程克顺</div>
                         <div>加利福尼亚大学洛杉矶分校心理学博士</div>
                         <div class="position_img">美国 加州</div>
-
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
                 <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是她开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
             </li>
             <li>
                 <div>
-                    <img src="image/"/>
+                    <img src="image/yeyihui-head.png"/>
                     <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
+                        <div>叶懿慧</div>
+                        <div>宾夕法尼亚大学心理计量学硕士</div>
+                        <div class="position_img">美国 麻省</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
-                <div class="head_info"></div>
+                <div class="head_info">叶懿慧Alice，幸福创客。宾夕法尼亚大学心理计量学硕士，现为哈佛大学多元文化心理健康中心研究员。曾任积极心理学中心研究助理，致力於幸福研究和健康促进。穿梭在数字与文化差异之间，盼能了解幸福何以衡量，实践在生活里微加幸福。工作之馀，喜欢旅行，发现生命的各种可能性。也喜欢各种形式的创作，透过理念交流，获得知识的激荡。</div>
             </li>
             <li>
                 <div>
-                    <img src="image/"/>
+                    <img src="image/lisien-head.png"/>
                     <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
+                        <div>李思恩</div>
+                        <div>伦敦帝国学院心理学博士</div>
+                        <div class="position_img">英国 伦敦</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
-                <div class="head_info"></div>
+                <div class="head_info">李思恩Lucy，幸福创客。伦敦帝国学院心理学博士，是心灵泉源公司的联合创办人，英国最领先的个人影响力训练顾问公司之一。在过去十年间，成功培训超过九千人，立志要帮助客人在竞争强烈的市场上去了解和表达他们的价值，也热忱于帮助他们的发展以提升自信和潜在才能。幸福感悟：“透过幸福创客将心理学的实际应用引入企业”。</div>
             </li>
             <li>
                 <div>
-                    <img src="image/"/>
+                    <img src="image/zhushanshan-head.png"/>
                     <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
+                        <div>朱珊珊</div>
+                        <div>伦敦大学学院神经科学博士</div>
+                        <div class="position_img">新加坡</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
-                <div class="head_info"></div>
+                <div class="head_info">朱珊珊 Ivy Zhu，幸福创客。先后在剑桥大学及伦敦大学学院研习神经科学学士和博士。三分之一的人生都埋首于实验室, 事实上更爱阅读及文字工作。热爱体验多元生活及旅游,曾在非洲做过义务劳动，现在亚洲从事科研工作。喜欢跳舞,热爱心理学,追求合理安心喜悦的人生。</div>
             </li>
             <li>
                 <div>
-                    <img src="image/"/>
+                    <img src="image/cheshihan-head.png"/>
                     <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
+                        <div>陈诗涵</div>
+                        <div>美国宾夕法尼亚大学谘询与心理卫生硕士</div>
+                        <div class="position_img">美国 费城</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
-                <div class="head_info"></div>
+                <div class="head_info">陈诗涵，幸福创客。美国宾夕法尼亚大学谘询与心理卫生硕士，儿童与家庭心理治疗师。现
+
+                    居费城，任职於美国西北人文服务行为健康复健团队，也曾服务於美国东北治疗中心家庭与社区治疗团队。专门从事儿童与家庭心理谘询，对游戏治疗及认知行为治疗情有独锺。关注亲职教育丶学校教育与儿童心理疾患议题。致力於将幽默与音乐融入生活。</div>
+            </li>
+
+            <li>
+                <div>
+                    <img src="image/linyu-head.png"/>
+                    <div class="expert_info">
+                        <div>林宇</div>
+                        <div>早稻田大学文学学术院博士生</div>
+                        <div class="position_img">日本 东京</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
+                    </div>
+                </div>
+                <div class="head_info">林宇 Lincoln，幸福创客。早稻田大学文学学术院博士生，学士及硕士分别毕业于东北师范大学和清华大学。自幼频繁往来于中日两国之间，热爱文学研究及创作。目前从事中日古典文学比较研究工作，主要以日本最早的诗歌集《万叶集》为中心。兴趣广泛，喜欢听歌看电影，曾多次获得日语演讲比赛一等奖。幸福感悟：“让希望凝聚幸福，让幸福永不消沉”。</div>
             </li>
             <li>
                 <div>
-                    <img src="image/"/>
+                    <img src="image/fengjunhao-head.png"/>
                     <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
+                        <div>冯骏豪</div>
+                        <div>北京大学哲学博士生</div>
+                        <div class="position_img">中国 北京</div>
+                        <img class="control dakai" src="./image/dakai.png"/>
                     </div>
                 </div>
-                <div class="head_info"></div>
-            </li>
-            <li>
-                <div>
-                    <img src="image/"/>
-                    <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
-                    </div>
-                </div>
-                <div class="head_info"></div>
-            </li>
-            <li>
-                <div>
-                    <img src="image/"/>
-                    <div class="expert_info">
-                        <div></div>
-                        <div></div>
-                        <div class="position_img"></div>
-
-                    </div>
-                </div>
-                <div class="head_info"></div>
+                <div class="head_info">冯骏豪 Jacky，幸福创客。北京大学哲学博士生，清华大学哲学硕士。专攻中国哲学研究，相信中国传统智慧能够为建立幸福生活带来贡献。除了埋首书籍和写作，更喜欢走进社会，观察不同人的生活模式，认识不同地域的文化，寻找快乐的生活方式和学习欣赏生活细节中的美感。现在穿梭北京和香港生活，感受着古都和大都会独特的人文脉动。</div>
             </li>
         <ul>
     </div>
