--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -101,34 +101,34 @@
             我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“wi-Matt”，一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
 
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             在wi-Matt，专家们可以：
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 获取最前沿的科研信息
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 展示科研成果
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 专业学术、案例交流
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 跨界合作
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 全球资源共享
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 业界同仁交友
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 自助学习，专业增值
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 参与科研的机会
         </div>
-        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 为大众提供专业心理服务
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
@@ -139,7 +139,7 @@
 
         <ul class="putong_zhuanjia">
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                 <img src="image/mayating-head.png"/>
                 <div class="expert_info">
                     <div class="name">马亚婷</div>
@@ -151,7 +151,7 @@
                 <div class="head_info">马亚婷Clare，幸福创客。北京大学医学博士。参与过世界卫生组织、卫生部、教育部等多项研究课题，并考取国家二级心理咨询师。关注抑郁症的预防及治疗、儿童自闭症的干预及治疗、学校教育、亲职教育等。致力于从公共卫生的角度预防儿童及成人心理障碍的发生，减少复发、促进康复，实现幸福殷盛的人生。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/chengkeshun-head.png"/>
                     <div class="expert_info">
                         <div>程克顺</div>
@@ -163,7 +163,7 @@
                 <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是她开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/yeyihui-head.png"/>
                     <div class="expert_info">
                         <div>叶懿慧</div>
@@ -175,7 +175,7 @@
                 <div class="head_info">叶懿慧Alice，幸福创客。宾夕法尼亚大学心理计量学硕士，现为哈佛大学多元文化心理健康中心研究员。曾任积极心理学中心研究助理，致力於幸福研究和健康促进。穿梭在数字与文化差异之间，盼能了解幸福何以衡量，实践在生活里微加幸福。工作之馀，喜欢旅行，发现生命的各种可能性。也喜欢各种形式的创作，透过理念交流，获得知识的激荡。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/lisien-head.png"/>
                     <div class="expert_info">
                         <div>李思恩</div>
@@ -187,7 +187,7 @@
                 <div class="head_info">李思恩Lucy，幸福创客。伦敦帝国学院心理学博士，是心灵泉源公司的联合创办人，英国最领先的个人影响力训练顾问公司之一。在过去十年间，成功培训超过九千人，立志要帮助客人在竞争强烈的市场上去了解和表达他们的价值，也热忱于帮助他们的发展以提升自信和潜在才能。幸福感悟：“透过幸福创客将心理学的实际应用引入企业”。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/zhushanshan-head.png"/>
                     <div class="expert_info">
                         <div>朱珊珊</div>
@@ -199,7 +199,7 @@
                 <div class="head_info">朱珊珊 Ivy Zhu，幸福创客。先后在剑桥大学及伦敦大学学院研习神经科学学士和博士。三分之一的人生都埋首于实验室, 事实上更爱阅读及文字工作。热爱体验多元生活及旅游,曾在非洲做过义务劳动，现在亚洲从事科研工作。喜欢跳舞,热爱心理学,追求合理安心喜悦的人生。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/cheshihan-head.png"/>
                     <div class="expert_info">
                         <div>陈诗涵</div>
@@ -214,7 +214,7 @@
             </li>
 
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/linyu-head.png"/>
                     <div class="expert_info">
                         <div>林宇</div>
@@ -226,7 +226,7 @@
                 <div class="head_info">林宇 Lincoln，幸福创客。早稻田大学文学学术院博士生，学士及硕士分别毕业于东北师范大学和清华大学。自幼频繁往来于中日两国之间，热爱文学研究及创作。目前从事中日古典文学比较研究工作，主要以日本最早的诗歌集《万叶集》为中心。兴趣广泛，喜欢听歌看电影，曾多次获得日语演讲比赛一等奖。幸福感悟：“让希望凝聚幸福，让幸福永不消沉”。</div>
             </li>
             <li>
-                <div>
+                <div class="one_putong_zhuanjia">
                     <img src="image/fengjunhao-head.png"/>
                     <div class="expert_info">
                         <div>冯骏豪</div>
