--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -132,8 +132,9 @@
             &nbsp; &nbsp; &nbsp; 为大众提供专业心理服务
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            为了提供最好的服务，所以我们暂时只通过邀请码的方式邀请部分专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络wi-matt@winnovator.com
-        </div>
+            为了提供最好的服务质量，所以我们暂时只通过邀请码的方式邀请专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络
+            <br>wi-matt@winnovator.com</div>
+
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             我们会尽快更新专家库的信息。</div>
 
