--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -161,7 +161,7 @@
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
                 </div>
-                <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是她开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
+                <div class="head_info">程克顺Chris ，幸福创客。加利福尼亚大学洛杉矶分校心理学博士。完成哈佛大学的历史学士，但不久就发现心理学才是自己的兴趣。于是他开始修读哈佛的心理学课程，而最后考取了加利福尼亚大学洛杉矶分校心理学博士。在过去几年，在加州大学担任研究助理员和在长老派医院做社工。幸福感悟：“如何过梦想的生活和在生活与工作中寻觅意义”。</div>
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
