--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -177,6 +177,18 @@
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
+                    <img src="image/wangyuanyuan-head.png"/>
+                    <div class="expert_info">
+                        <div>王园园</div>
+                        <div>澳门大学心理学博士</div>
+                        <div class="position_img">中国 澳门</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">王园园Angela，幸福创客。澳门大学心理学博士，伦敦国王学院精神健康研究硕士，伯明翰阿斯顿人类心理学本科。研究方向为积极心理学，健康心理学，以及精神健康。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
                     <img src="image/lisien-head.png"/>
                     <div class="expert_info">
                         <div>李思恩</div>
@@ -237,6 +249,31 @@
                     </div>
                 </div>
                 <div class="head_info">冯骏豪 Jacky，幸福创客。北京大学哲学博士生，清华大学哲学硕士。专攻中国哲学研究，相信中国传统智慧能够为建立幸福生活带来贡献。除了埋首书籍和写作，更喜欢走进社会，观察不同人的生活模式，认识不同地域的文化，寻找快乐的生活方式和学习欣赏生活细节中的美感。现在穿梭北京和香港生活，感受着古都和大都会独特的人文脉动。</div>
+            </li>
+
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/maying-head.png"/>
+                    <div class="expert_info">
+                        <div>马颖</div>
+                        <div>香港中文大学教育心理学系博士</div>
+                        <div class="position_img">中国 香港</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">马颖Jessie  香港中文大学教育心理学系博士在读，北京大学管理心理学方向硕士毕业。主要致力于正念（mindfulness）方法、家庭教育、健康心理学、企业压力管理等方向。 曾多次带领家长正念活动，情绪管理团体活动等，帮助参加者缓解压力、提高积极情绪、认识并接纳自己、改善人际关系。幸福理念“幸福就是内心的平和、喜悦，找到心灵回家的路。” </div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/maomao-head.png"/>
+                    <div class="expert_info">
+                        <div>毛茅</div>
+                        <div>剑桥大学心理学博士生</div>
+                        <div class="position_img">英国 剑桥</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">毛茅Stephanie，幸福创客。剑桥大学心理学博士生。研究专注于针对老年人群的人机交互设计。旨在透过音乐和心理学理论探索新交互科技的设计与开发，让科技服务于人类福祉。热爱音乐与创作，谱过清新小调，也担任过摇滚乐队键盘手，现为剑桥大学合唱团成员，活跃在校园舞台。幸福感言：让科技福祉心灵，让心灵福祉科技。</div>
             </li>
         <ul>
     </div>
