--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -50,7 +50,7 @@
     <div class="expert">
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
-            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导。他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们”的成长。
+            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导。他们大都是创始团队成员的导师或研究伙伴，贴身的指导着我们的成长。
         </div>
         <ul>
             <li>
