--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -153,6 +153,42 @@
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
+                    <img src="image/huyifan-head.png"/>
+                    <div class="expert_info">
+                        <div>胡一凡</div>
+                        <div>美国伊利诺伊大学厄巴纳-香槟分校认知神经学博士生</div>
+                        <div class="position_img">美国 伊利诺伊州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">胡一凡，幸福创客。美国伊利诺伊大学厄巴纳-香槟分校认知神经学博士生，2013年毕业于香港中文大学心理学系。研究兴趣集中于认知与情绪的交互作用，希望通过自己的研究帮助我们进一步了解情绪，从而更加有效地管理自己。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/wangzao-head.png"/>
+                    <div class="expert_info">
+                        <div>王枣</div>
+                        <div>美国耶鲁大学社会人格心理学博士</div>
+                        <div class="position_img">美国 康涅狄格州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">王枣Allie, 幸福创客。美国耶鲁大学社会人格心理学博士，现在耶鲁大学研习社会人格心理学和进化学行为经济，进行消费者行为研究，并参与教育和亲子关系的项目。怀念加州的阳光海洋果昔，以及在麻省汉普郡学院喂羊驼、过草原、学习人文创作的四年时光。以帮助身边的人寻找目标、实现心愿为理念，相信自己活得充实、喜悦、满足是能够更好的带动他人的前提。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/xuyishan-head.png"/>
+                    <div class="expert_info">
+                        <div>徐艺珊</div>
+                        <div>弗吉尼亚大学临心床理学博士</div>
+                        <div class="position_img">美国 弗吉尼亚州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">徐艺珊，幸福创客。弗吉尼亚大学临心床理学博士，加州州立大学社会心理学硕士，圣地亚哥sharp综合医院驻院实习生。在人生的起起落落中追寻内心的平静，积极关注与推广自我关怀。热爱探索新鲜事物，自驾游，莎莎舞，卡拉OK，办火锅趴！！！对的，工作之外的我就是吃货一枚，“借口”是心理减压。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
                     <img src="image/chengkeshun-head.png"/>
                     <div class="expert_info">
                         <div>程克顺</div>
@@ -211,6 +247,7 @@
                 </div>
                 <div class="head_info">毛茅Stephanie，幸福创客。剑桥大学心理学博士生。研究专注于针对老年人群的人机交互设计。旨在透过音乐和心理学理论探索新交互科技的设计与开发，让科技服务于人类福祉。热爱音乐与创作，谱过清新小调，也担任过摇滚乐队键盘手，现为剑桥大学合唱团成员，活跃在校园舞台。幸福感言：让科技福祉心灵，让心灵福祉科技。</div>
             </li>
+
             <li>
                 <div class="one_putong_zhuanjia">
                     <img src="image/lisien-head.png"/>
