--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -161,7 +161,7 @@
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
                 </div>
-                <div class="head_info">胡一凡，幸福创客。美国伊利诺伊大学厄巴纳-香槟分校认知神经学博士生，2013年毕业于香港中文大学心理学系。研究兴趣集中于认知与情绪的交互作用，希望通过自己的研究帮助我们进一步了解情绪，从而更加有效地管理自己。</div>
+                <div class="head_info">胡一凡，幸福创客。2013年毕业于香港中文大学心理学系，美国伊利诺伊大学厄巴纳-香槟分校认知神经学博士生。研究兴趣集中于认知与情绪的交互作用，希望通过自己的研究帮助我们进一步了解情绪，从而更加有效地管理自己。</div>
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
