--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -185,7 +185,7 @@
                         <img class="control guanbi" src="./image/guanbi.png"/>
                     </div>
                 </div>
-                <div class="head_info">徐艺珊，幸福创客。弗吉尼亚大学临心床理学博士，加州州立大学社会心理学硕士，圣地亚哥sharp综合医院驻院实习生。在人生的起起落落中追寻内心的平静，积极关注与推广自我关怀。热爱探索新鲜事物，自驾游，莎莎舞，卡拉OK，办火锅趴！！！对的，工作之外的我就是吃货一枚，“借口”是心理减压。</div>
+                <div class="head_info">徐艺珊，幸福创客。加州州立大学社会心理学硕士，弗吉尼亚大学临心床理学博士，圣地亚哥sharp综合医院驻院实习生。在人生的起起落落中追寻内心的平静，积极关注与推广自我关怀。热爱探索新鲜事物，自驾游，莎莎舞，卡拉OK，办火锅趴！！！对的，工作之外的我就是吃货一枚，“借口”是心理减压。</div>
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
