--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -98,11 +98,11 @@
         </ul>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“wi-Matt”，一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
+            我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“Wi-Matt”（创客汇），一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。
 
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            在wi-Matt，专家们可以：
+            Wi-Matt是winnovator matters的意思，在Wi-Matt，专家们可以：
         </div>
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
             &nbsp; &nbsp; &nbsp; 获取最前沿的科研信息
@@ -134,6 +134,12 @@
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             为了提供最好的服务质量，所以我们暂时只通过邀请码的方式邀请专家加入，如果您愿意在此阶段和我们一起让wi-Matt变得更完美，请联络
             <br>wi-matt@winnovator.com</div>
+
+        <div style="text-align: center; margin-bottom: 20px">
+            <a class="qiyeshiyong" href="./login.html">
+                <img src="./image/zhuanjiadenglu.png">
+            </a>
+        </div>
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             我们会尽快更新专家库的信息。</div>
