--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -159,6 +159,30 @@
             </li>
             <li>
                 <div class="one_putong_zhuanjia">
+                    <img src="image/tanmingxuan.png"/>
+                    <div class="expert_info">
+                        <div class="name">谭茗轩</div>
+                        <div>美国雪城大学攻读社会心理学博士</div>
+                        <div class="position_img">美国 纽约州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">谭茗轩，幸福创客。北京师范大学心理学学士，美国雪城大学攻读社会心理学博士。认为一切烦喜忧欢皆源于自我，因此从事围绕自我这个题目的科研活动。闲时喜爱音乐，历史，和大自然。常常感到生活中必不可少的元素是可爱，有趣和哲理。一直暗暗想做一个对社会有用的人。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
+                    <img src="image/duanyiran.png"/>
+                    <div class="expert_info">
+                        <div class="name">段依然</div>
+                        <div>斯坦福大学心理系神经科学博士生</div>
+                        <div class="position_img">美国 加利福尼亚州</div>
+                        <img class="control guanbi" src="./image/guanbi.png"/>
+                    </div>
+                </div>
+                <div class="head_info">段依然，Karen Duan, 幸福创客。 斯坦福大学心理系神经科学博士在读。崇拜hard science,确不希望“爱”有朝一日被公式解释清；喜欢学术，却不希望自己被象牙塔所束缚；热爱生活，却不希望被生活主导随波逐流。爱好捣鼓fashion，欣赏音乐，寻找美食。坚信学心理学首先要让自己心理健康开心阳光，致力于做一个非典型博士生的同时，也希望能让更多的人了解和应用心理学，在点滴中提高幸福感。</div>
+            </li>
+            <li>
+                <div class="one_putong_zhuanjia">
                     <img src="image/huyifan-head.png"/>
                     <div class="expert_info">
                         <div>胡一凡</div>
